--- a/Melt in 90/index.html
+++ b/Melt in 90/index.html
@@ -448,6 +448,35 @@
             .progress-step {
                 margin: 10px 0;
             }
+
+            .section-title h2 {
+                font-size: 30px;
+            }
+
+            .section-title p {
+                font-size: 16px;
+            }
+
+            .feature h3 {
+                font-size: 20px;
+            }
+
+            .feature p {
+                font-size: 16px;
+            }
+
+            .transformation-card, .meal-plan, .testimonial, .contact-form {
+                padding: 20px;
+            }
+
+            .form-control {
+                font-size: 14px;
+            }
+
+            .submit-button {
+                width: 100%;
+                font-size: 16px;
+            }
         }
     </style>
 </head>
