--- a/Melt in 90/index.html
+++ b/Melt in 90/index.html
@@ -402,6 +402,14 @@
             display: none;
             flex-direction: column;
             gap: 20px;
+            position: absolute;
+            top: 100%;
+            right: 0;
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+            z-index: 1000;
         }
 
         .mobile-menu a {
