--- a/Melt in 90/index.html
+++ b/Melt in 90/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+what else do i need to do for this <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -410,6 +410,11 @@
             padding: 20px;
             border-radius: 10px;
             z-index: 1000;
+            width: 200px;
+        }
+
+        .mobile-menu.active {
+            display: flex;
         }
 
         .mobile-menu a {
@@ -434,7 +439,7 @@
             }
 
             .mobile-menu {
-                display: flex;
+                display: none;
             }
 
             .menu-icon {
