--- a/Melt in 90/index.html
+++ b/Melt in 90/index.html
@@ -38,6 +38,13 @@
             padding: 20px 0;
         }
 
+        .menu-icon {
+            display: none;
+            font-size: 28px;
+            cursor: pointer;
+            margin-right: 20px; /* Add some spacing between the icon and logo */
+        }
+
         .logo {
             font-size: 24px;
             font-weight: 700;
@@ -70,6 +77,7 @@
             border-radius: 30px;
             font-weight: 600;
             text-decoration: none;
+            margin-left: auto; /* Push the "Get Started" button to the right */
         }
 
         .hero {
@@ -427,12 +435,6 @@
             color: #1e88e5;
         }
 
-        .menu-icon {
-            display: none;
-            font-size: 28px;
-            cursor: pointer;
-        }
-
         @media (max-width: 768px) {
             .nav-links {
                 display: none;
@@ -498,6 +500,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
+                <div class="menu-icon">&#9776;</div>
                 <div class="logo">Melt<span>in90</span></div>
                 <div class="nav-links">
                     <a href="#features">Features</a>
@@ -506,7 +509,6 @@
                     <a href="#about">About Us</a>
                     <a href="#blog">Blog</a>
                 </div>
-                <div class="menu-icon">&#9776;</div>
                 <a href="#contact" class="nav-action">Get Started</a>
             </nav>
             <div class="mobile-menu">
