--- a/Melt in 90/index.html
+++ b/Melt in 90/index.html
@@ -738,7 +738,39 @@
                 <h2>Get Started Today</h2>
                 <p>Fill out the form below to begin your 90-day transformation journey.</p>
             </div>
-            <div class="contact-form">
+            <div class="contact-form" id="bmi-form">
+                <form id="bmiForm">
+                    <!-- Form Inputs for BMI Calculation -->
+                    <div class="form-group">
+                        <label for="height">Height (cm):</label>
+                        <input type="number" id="height" name="height" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="weight">Weight (kg):</label>
+                        <input type="number" id="weight" name="weight" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="age">Age:</label>
+                        <input type="number" id="age" name="age" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="gender">Gender:</label>
+                        <select id="gender" name="gender" class="form-control" required>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+                    </div>
+                    <button type="button" class="submit-button" onclick="calculateBMI()">Calculate BMI</button>
+                </form>
+
+                <!-- BMI Result -->
+                <div id="bmiResult" style="display: none; margin-top: 20px;">
+                    <h3>Your BMI is: <span id="bmiValue"></span></h3>
+                    <p id="bmiMessage"></p>
+                </div>
+            </div>
+
+            <div class="contact-form" id="main-form" style="display: none;">
                 <form action="https://api.web3forms.com/submit" method="POST">
                     <!-- Access Key -->
                     <input type="hidden" name="access_key" value="7d149d23-c0b0-4e09-9b5f-3a84136eccde">
@@ -757,15 +789,15 @@
                         <input type="tel" id="phone" name="phone" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="fitness-level">Current Fitness Level</label>
-                        <select id="fitness-level" name="fitnessLevel" class="form-control">
-                            <option value="beginner">Beginner - New to fitness</option>
-                            <option value="intermediate">Intermediate - Some experience</option>
-                            <option value="advanced">Advanced - Regularly active</option>
+                        <label for="fitness-goals">Fitness Goals</label>
+                        <select id="fitness-goals" name="fitnessGoals" class="form-control" required>
+                            <option value="lose-weight">Lose Weight</option>
+                            <option value="gain-muscle">Gain Muscle</option>
+                            <option value="maintain-fitness">Maintain Fitness</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="goals">Your Fitness Goals</label>
+                        <label for="goals">Your Goals</label>
                         <textarea id="goals" name="message" class="form-control" rows="4" required></textarea>
                     </div>
 
@@ -819,6 +851,30 @@
         document.querySelector('.menu-icon').addEventListener('click', () => {
             document.querySelector('.mobile-menu').classList.toggle('active');
         });
+
+        function calculateBMI() {
+            const height = document.getElementById('height').value;
+            const weight = document.getElementById('weight').value;
+            const bmiValue = (weight / (height * height / 10000)).toFixed(2);
+            const bmiMessage = getBMIMessage(bmiValue);
+
+            document.getElementById('bmiValue').innerText = bmiValue;
+            document.getElementById('bmiMessage').innerText = bmiMessage;
+            document.getElementById('bmiResult').style.display = 'block';
+            document.getElementById('main-form').style.display = 'block';
+        }
+
+        function getBMIMessage(bmi) {
+            if (bmi < 18.5) {
+                return "You are underweight.";
+            } else if (bmi >= 18.5 && bmi < 24.9) {
+                return "You have a normal weight.";
+            } else if (bmi >= 25 && bmi < 29.9) {
+                return "You are overweight.";
+            } else {
+                return "You are obese.";
+            }
+        }
     </script>
 </body>
 </html>
